# Spark-Kmeans-Scalability

./: .gitignore  KNN_POINTS.geojson  LICENSE  README.md  TODO.md  generateEmbeddingParquet.ipynb  geotessera_test.ipynb  knn_vs_kmeans_classification.ipynb  pyproject.toml  references.bib  report.typ  sizeup_scalability_test.ipynb  spark_kmeans_scalability.ipynb  test_pyspark.ipynb
kmeans_scalability/: __init__.py  models.py  visualization.py
output_mosaics/: kmeans_mosaic.tiff  knn_mosaic.tiff
