[project]
name = "spark-kmeans-scalability"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "geopandas>=1.1.2",
    "geotessera>=0.7.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pyspark==3.5.7",
    "rasterio>=1.4.4",
    "scikit-learn>=1.8.0",
    "xarray>=2025.12.0",
]
